--- a/big_query.ipynb
+++ b/big_query.ipynb
@@ -22,9 +22,7 @@
     "import pandas as pd\n",
     "from pandas.io import gbq\n",
     "import os\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "data_g = None"
+    "from dotenv import load_dotenv"
    ]
   },
   {
