--- a/big_query.ipynb
+++ b/big_query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pull data from data.gov.in"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_data():\n",
+    "    '''\n",
+    "        A function to fetch data from API (data.gov.in)\n",
+    "    '''\n",
     "    resource = \"/resource/3b01bcb8-0b14-4abf-b6f2-c1bfd384ba69\"\n",
     "    api_key = \"579b464db66ec23bdd000001d16bebe4295744234023fe46120b3f81\"\n",
     "\n",
@@ -53,78 +64,423 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id                object\n",
-       "country           object\n",
-       "state             object\n",
-       "city              object\n",
-       "station           object\n",
-       "last_update       object\n",
-       "pollutant_id      object\n",
-       "pollutant_min     object\n",
-       "pollutant_max     object\n",
-       "pollutant_avg     object\n",
-       "pollutant_unit    object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_df = get_data()\n",
-    "data_df.dtypes"
+    "data_df = get_data()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Push data into BigQuery"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "project_id = \"steel-capsule-372509\"\n",
-    "dataset = \"realtime_aqi\"\n",
+    "dataset_id = \"realtime_aqi\"\n",
     "table_name = \"everything\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 5343.06it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 2534.32it/s]\n"
      ]
     }
    ],
    "source": [
     "data_df.to_gbq(\n",
-    "    destination_table=f\"{dataset}.{table_name}\",\n",
+    "    destination_table=f\"{dataset_id}.{table_name}\",\n",
     "    project_id=project_id,\n",
     "    if_exists=\"replace\", # fail/append/replace\n",
     ")"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Run queries on BigQuery"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"SELECT city, state, pollutant_id, pollutant_avg FROM `steel-capsule-372509.realtime_aqi.everything` WHERE pollutant_id IN('PM2.5', 'PM10')\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>pollutant_id</th>\n",
+       "      <th>pollutant_avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Amaravati</td>\n",
+       "      <td>Andhra_Pradesh</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Amaravati</td>\n",
+       "      <td>Andhra_Pradesh</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Anantapur</td>\n",
+       "      <td>Andhra_Pradesh</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Anantapur</td>\n",
+       "      <td>Andhra_Pradesh</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rajamahendravaram</td>\n",
+       "      <td>Andhra_Pradesh</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Tirupati</td>\n",
+       "      <td>Andhra_Pradesh</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Tirupati</td>\n",
+       "      <td>Andhra_Pradesh</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Tirupati</td>\n",
+       "      <td>Andhra_Pradesh</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Tirupati</td>\n",
+       "      <td>Andhra_Pradesh</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Visakhapatnam</td>\n",
+       "      <td>Andhra_Pradesh</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Visakhapatnam</td>\n",
+       "      <td>Andhra_Pradesh</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Guwahati</td>\n",
+       "      <td>Assam</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Guwahati</td>\n",
+       "      <td>Assam</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Guwahati</td>\n",
+       "      <td>Assam</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Guwahati</td>\n",
+       "      <td>Assam</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Sivasagar</td>\n",
+       "      <td>Assam</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Sivasagar</td>\n",
+       "      <td>Assam</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Araria</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Araria</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Arrah</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Arrah</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Aurangabad</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Aurangabad</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Begusarai</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Bhagalpur</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Bhagalpur</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Bhagalpur</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Bhagalpur</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Bihar Sharif</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Chhapra</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Chhapra</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Darbhanga</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Darbhanga</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Gaya</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Gaya</td>\n",
+       "      <td>Bihar</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>289</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 city           state pollutant_id pollutant_avg\n",
+       "0           Amaravati  Andhra_Pradesh        PM2.5           256\n",
+       "1           Amaravati  Andhra_Pradesh         PM10           142\n",
+       "2           Anantapur  Andhra_Pradesh        PM2.5            32\n",
+       "3           Anantapur  Andhra_Pradesh         PM10            54\n",
+       "4   Rajamahendravaram  Andhra_Pradesh         PM10           115\n",
+       "5            Tirupati  Andhra_Pradesh        PM2.5           176\n",
+       "6            Tirupati  Andhra_Pradesh         PM10           105\n",
+       "7            Tirupati  Andhra_Pradesh        PM2.5            50\n",
+       "8            Tirupati  Andhra_Pradesh         PM10            73\n",
+       "9       Visakhapatnam  Andhra_Pradesh        PM2.5           193\n",
+       "10      Visakhapatnam  Andhra_Pradesh         PM10           138\n",
+       "11           Guwahati           Assam        PM2.5           257\n",
+       "12           Guwahati           Assam         PM10           166\n",
+       "13           Guwahati           Assam        PM2.5           264\n",
+       "14           Guwahati           Assam         PM10           189\n",
+       "15          Sivasagar           Assam        PM2.5            42\n",
+       "16          Sivasagar           Assam         PM10            37\n",
+       "17             Araria           Bihar        PM2.5           301\n",
+       "18             Araria           Bihar         PM10           286\n",
+       "19              Arrah           Bihar        PM2.5           359\n",
+       "20              Arrah           Bihar         PM10           317\n",
+       "21         Aurangabad           Bihar        PM2.5           301\n",
+       "22         Aurangabad           Bihar         PM10           254\n",
+       "23          Begusarai           Bihar         PM10           380\n",
+       "24          Bhagalpur           Bihar        PM2.5           411\n",
+       "25          Bhagalpur           Bihar         PM10           346\n",
+       "26          Bhagalpur           Bihar        PM2.5           399\n",
+       "27          Bhagalpur           Bihar         PM10           345\n",
+       "28       Bihar Sharif           Bihar        PM2.5           380\n",
+       "29            Chhapra           Bihar        PM2.5           397\n",
+       "30            Chhapra           Bihar         PM10           400\n",
+       "31          Darbhanga           Bihar        PM2.5           369\n",
+       "32          Darbhanga           Bihar         PM10           290\n",
+       "33               Gaya           Bihar        PM2.5           316\n",
+       "34               Gaya           Bihar         PM10           289"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_df = pd.read_gbq(query, project_id)\n",
+    "result_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = \"credentials.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# from google.cloud import bigquery\n",
     "\n",
-    "# client = bigquery.Client()\n",
-    "# table_id = f\"{project_id}.{dataset}.{table_name}\""
+    "# client = bigquery.Client(project=project_id)\n",
+    "# job = client.query(query=query)\n",
+    "\n",
+    "# result = job.result()\n",
+    "# result"
    ]
   },
   {
