--- a/big_query.ipynb
+++ b/big_query.ipynb
@@ -121,16 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"SELECT city, state, pollutant_id, pollutant_avg FROM `steel-capsule-372509.realtime_aqi.everything` WHERE pollutant_id IN('PM2.5', 'PM10')\""
+    "query = \"\"\"SELECT city, state, pollutant_id, pollutant_avg\n",
+    "    FROM `steel-capsule-372509.realtime_aqi.everything`\n",
+    "    WHERE pollutant_id IN('PM2.5', 'PM10')\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +452,7 @@
        "34               Gaya           Bihar         PM10           289"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
