--- a/big_query.ipynb
+++ b/big_query.ipynb
@@ -53,7 +53,7 @@
     "    }\n",
     "\n",
     "    response = requests.get(url, headers=headers)\n",
-    "    data = json.loads(response.content.decode())\n",
+    "    data = json.loads(response.content)\n",
     "\n",
     "    data_df = pd.DataFrame(data=data[\"records\"])\n",
     "    data_df = data_df[(data_df[\"pollutant_avg\"] != \"NA\") & (data_df[\"pollutant_max\"] != \"NA\") & (data_df[\"pollutant_min\"] != \"NA\")]\n",
@@ -99,7 +99,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 2534.32it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 2392.64it/s]\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "34               Gaya           Bihar         PM10           289"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
